fix: fixed banner size in different resolutions / fixed border-radius value on collapse element / removed unwanted border-radius on slideshow

--- a/src/styles/Banner.scss
+++ b/src/styles/Banner.scss
@@ -5,7 +5,7 @@
     background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
         url("../assets/about_banner_bg.jpg");
     width: 100%;
-    height: 14rem;
+    aspect-ratio: 5.5;
     background-position: center;
     background-size: cover;
     border-radius: 25px;
